<resources>
    <string name="app_name">Running Split Calculator</string>

    <!-- Button Labels -->
    <string name="button_calc_splits">Calculate Splits</string>

    <!-- Input Hints -->
    <string name="hint_hours">Hours</string>
    <string name="hint_minutes">Minutes</string>
    <string name="hint_seconds">Seconds</string>
    <string name="hint_distance">Distance</string>

    <!-- Placeholder Attributes -->
    <string name="placeholder_distance">Distance Here</string>

    <!-- Image Descriptions -->
    <string name="expand_more">Expand Splits</string>
    <string name="expand_less">Collapse Splits</string>


</resources>